# wissensdb

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  projects.yaml.example  pyproject.toml
.agents/: wissensdb.env.example
.codex/skills/wissensdb/: SKILL.md
.github/workflows/: container.yml
deploy/: wissensdb.service
migrations/: env.py
migrations/versions/: 0001_initial.py
skills/codex/: SKILL.md
skills/openclaw/: wissensdb.md
src/wissensdb/: __init__.py  app_factory.py  auth.py  cli.py  config.py  database.py  embeddings.py  enums.py  main.py  models.py  project_config.py  qdrant_store.py  repositories.py  scanner.py  schemas.py  services.py  sqltypes.py  vector_store.py
tests/: test_api_routing.py  test_auth.py  test_config.py  test_embeddings.py  test_guardrails.py  test_migration_contract.py  test_project_config.py  test_scanner.py  test_service.py
