[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wissensdb"
version = "0.1.0"
description = "Scoped project knowledge service for coding agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.115",
  "httpx>=0.27",
  "pgvector>=0.3",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "psycopg[binary]>=3.2",
  "PyYAML>=6.0",
  "python-dotenv>=1.0",
  "sqlalchemy>=2.0",
  "typer>=0.12",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
]

[project.scripts]
wissensdb = "wissensdb.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/wissensdb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
